syntax = "proto3";
option java_multiple_files = true;
package com.example.grpc;

message HelloRequest {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
}

message HelloResponse {
  string greeting = 1;
}

service HelloService {
  rpc hello(HelloRequest) returns (HelloResponse);
  rpc streamHello(HelloRequest) returns (stream HelloResponse);
}
